kubernetes/apps/music/manifests/helper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helper-backend
  labels:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: helper-backend
  annotations:
    gatus.kalexlab.xyz/enabled: "true"
    gatus.kalexlab.xyz/path: /api/health
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: helper-backend
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: helper-backend
  labels:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: helper-backend
spec:
  serviceName: helper
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: music
      kalexlab.xyz/component: helper-backend
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: music
        kalexlab.xyz/component: helper-backend
        kalexlab.xyz/monitoring: "true"
        # egress.kalexlab.xyz/policy: vpn
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: music
          image: "registry.kalexlab.xyz/navidrome-helper/backend:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              memory: 200Mi
              cpu: 10m
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 10
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /library
              name: beet-library-pvc
            - mountPath: /config.yaml
              name: beet-secrets
              subPath: config.yaml
            - mountPath: /music
              name: music-pvc
            - mountPath: /tmp
              name: tmp
            - mountPath: /.cache
              name: cache
            - mountPath: /.config
              name: config
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: music-pvc
          persistentVolumeClaim:
            claimName: music-pvc
        - name: beet-secrets
          secret:
            secretName: beet-secrets
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: cache
          emptyDir:
            sizeLimit: 1Gi
        - name: config
          emptyDir:
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: beet-library-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: helper-frontend
  labels:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: helper-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: helper-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helper-frontend
  labels:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: helper-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: music
      kalexlab.xyz/component: helper-frontend
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: music
        kalexlab.xyz/component: helper-frontend
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: music
          image: "registry.kalexlab.xyz/navidrome-helper/frontend:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 10Mi
              cpu: 1m
            limits:
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /etc/nginx
              name: nginx
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /var/run
              name: run
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: nginx
          emptyDir:
            sizeLimit: 1Gi
        - name: nginx-cache
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 1Gi
