kubernetes/apps/music/manifests/navidrome.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  labels:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: navidrome
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4533
      targetPort: http
      protocol: TCP
  selector:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: navidrome
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
  labels:
    kalexlab.xyz/app: music
    kalexlab.xyz/component: navidrome
spec:
  serviceName: navidrome
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: music
      kalexlab.xyz/component: navidrome
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: music
        kalexlab.xyz/component: navidrome
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: music
          image: "docker.io/deluan/navidrome:0.64.2"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          resources:
            requests:
              memory: 30Mi
              cpu: 10m
            limits:
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /data
              name: navidrome-data-pvc
            - mountPath: /music
              name: music-pvc
            - mountPath: /navidrome.toml
              name: navidrome-conf
              subPath: navidrome.toml
            - mountPath: /cache
              name: cache
            - mountPath: /tmp
              name: tmp
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: music-pvc
          persistentVolumeClaim:
            claimName: music-pvc
        - name: navidrome-conf
          configMap:
            name: navidrome-conf
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: cache
          emptyDir:
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: navidrome-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
