kubernetes/apps/music/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-authentik-headers
spec:
  headers:
    customRequestHeaders:
      X-authentik-username: ""
      X-authentik-groups: ""
      X-authentik-email: ""
      X-authentik-name: ""
      X-authentik-uid: ""
      X-authentik-jwt: ""
      X-authentik-meta-jwks: ""
      X-authentik-meta-outpost: ""
      X-authentik-meta-provider: ""
      X-authentik-meta-app: ""
      X-authentik-meta-version: ""
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: music-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
    gatus.kalexlab.xyz/enabled: "true"
    gatus.kalexlab.xyz/exclude-route: /rest/
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`music.kalexlab.xyz`)
      services:
        - name: navidrome
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
    - kind: Rule
      match: "Host(`music.kalexlab.xyz`) && PathPrefix(`/rest/`) && !Query(`c`, `NavidromeUI`)"
      services:
        - name: navidrome
          port: http
      middlewares:
        - name: strip-authentik-headers
    - kind: Rule
      match: "Host(`get.music.kalexlab.xyz`) && PathPrefix(`/api`)"
      services:
        - name: helper-backend
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
    - kind: Rule
      match: Host(`get.music.kalexlab.xyz`)
      services:
        - name: helper-frontend
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: music-ingress-certificate-secret
