kubernetes/apps/music/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: udp-53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: navidrome
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: music
      kalexlab.xyz/component: navidrome
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: music
              kalexlab.xyz/component: helper-backend
      ports:
        - protocol: TCP
          port: http
  # Allow scrobbling and cover retrieval
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: helper-frontend
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: music
      kalexlab.xyz/component: helper-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: helper-backend
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: music
      kalexlab.xyz/component: helper-backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: http
  egress:
    # - to:
    #     - namespaceSelector:
    #         matchLabels:
    #           kubernetes.io/metadata.name: traefik
    #       podSelector:
    #         matchLabels:
    #           app.kubernetes.io/name: traefik
    #   ports:
    #     - protocol: TCP
    #       port: 8443
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: music
              kalexlab.xyz/component: navidrome
      ports:
        - protocol: TCP
          port: http
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
# ---
# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: allow-helper-to-music-egress
# spec:
#   endpointSelector:
#     matchLabels:
#       kalexlab.xyz/app: music
#       kalexlab.xyz/component: helper-backend
#   egress:
#     - toEndpoints:
#         - matchLabels:
#             k8s:io.kubernetes.pod.namespace: traefik
#             app.kubernetes.io/name: traefik
#       toPorts:
#         - ports:
#             - port: "8443"
#               protocol: TCP
#           serverNames:
#             - music.kalexlab.xyz
